Fixed icon spacing issue when screen is compressed

--- a/ComposeCollide/Content/Site.css
+++ b/ComposeCollide/Content/Site.css
@@ -106,33 +106,43 @@ td.bar {
     }
 
 .instrument {
-    width: 17px;
-    height: 17px;
-    padding: 0 5px 0;
     background-repeat: no-repeat;
     background-position-y: center;
 }
+.instrument div {
+    width: 17px;
+    height: 17px;
+    padding: 0 5px 0;
+}
+
 #i1 {
-    background-image: url(../img/bongo-bg.png)
+    background-image: url(../img/bongo-bg.png);
 }
+
 #i2 {
-    background-image: url(../img/cowbell-bg.png)
-}   
+    background-image: url(../img/cowbell-bg.png);
+}
+
 #i3 {
-    background-image: url(../img/shaker-bg.png)
+    background-image: url(../img/shaker-bg.png);
 }
+
 #i4 {
-    background-image: url(../img/claves-bg.png)
+    background-image: url(../img/claves-bg.png);
 }
+
 #i5 {
-    background-image: url(../img/snare-bg.png)
+    background-image: url(../img/snare-bg.png);
 }
+
 #i6 {
-    background-image: url(../img/block-bg.png)
+    background-image: url(../img/block-bg.png);
 }
+
 #i7 {
-    background-image: url(../img/bean-bg.png)
+    background-image: url(../img/bean-bg.png);
 }
+
 #i8 {
-    background-image: url(../img/scrape-bg.png)
+    background-image: url(../img/scrape-bg.png);
 }
